# grayshift

./: Cargo.toml  shader.wgsl
src/: AABB.rs  BVH.rs  ONB.rs  background.rs  camera.rs  color.rs  engine.rs  gpu.rs  hittable.rs  interval.rs  main.rs  material.rs  output.rs  pdf.rs  quad.rs  ray.rs  sphere.rs  texture.rs  util.rs  volume.rs  world.rs
src/bsdf/: diffuse_bsdf.rs  mod.rs
src/hittable/: BVH.rs  hittable.rs  mod.rs  plane.rs  quad.rs  sphere.rs  triangle.rs  volume.rs
src/shaders/: intersection.wgsl
src/util/: interval.rs  mesh.rs  mod.rs  util.rs  vec3.rs
