[package]
name = "grayshift"
version = "0.1.0"
edition = "2021"

[dependencies]
colog = "1.3.0"
fastrand = "2.1.1"
image = "0.25.2"
indicatif = "0.17.8"
log = "0.4.22"
noise = "0.9.0"
radiant = "0.3.0"
rayon = "1.10.0"
tobj = "4.0.2"
wgpu = "22.1.0"
bytemuck = { version = "1.18.0", features = ["derive"] }
flume = "0.11.0"
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }
nalgebra = { version = "0.33.0", features = ["bytemuck"] }
